// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/DataMaskRuleOverview render empty overview list 1`] = `
<body>
  <div>
    <section>
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          脱敏规则
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-1kh50jg"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-c38ntt"
                style="flex-wrap: wrap; margin-bottom: -8px;"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                  />
                </div>
                <div
                  class="ant-space-item"
                  style="padding-bottom: 8px;"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 12px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm actiontech-table-setting-namespace basic-button-wrapper css-geipcv"
                        style="padding: 0px 6px 0px 8px;"
                        type="button"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-czn7jp ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 5px;"
                          >
                            <span
                              class="custom-icon custom-icon-setting css-u3jcp4"
                              role="img"
                            >
                              <svg
                                fill="currentColor"
                                height="11"
                                viewBox="0 0 13 11"
                                width="13"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0.166687 8.50004H4.25002V9.66671H0.166687V8.50004ZM0.166687 4.41671H5.41669V5.58337H0.166687V4.41671ZM0.166687 0.333374H11.8334V1.50004H0.166687V0.333374ZM11.0599 5.59796L11.7342 5.36987L12.3175 6.38021L11.7832 6.84979C11.8504 7.16867 11.8504 7.49808 11.7832 7.81696L12.3175 8.28654L11.7342 9.29687L11.0599 9.06879C10.8207 9.28463 10.536 9.45088 10.2228 9.55296L10.0834 10.25H8.91669L8.77669 9.55237C8.46709 9.4512 8.18213 9.28627 7.94019 9.06821L7.26585 9.29687L6.68252 8.28654L7.21685 7.81696C7.1496 7.49808 7.1496 7.16867 7.21685 6.84979L6.68252 6.38021L7.26585 5.36987L7.94019 5.59796C8.17935 5.38212 8.46402 5.21587 8.77727 5.11379L8.91669 4.41671H10.0834L10.2234 5.11437C10.536 5.21587 10.8207 5.38271 11.0599 5.59854V5.59796ZM9.50002 8.50004C9.80944 8.50004 10.1062 8.37712 10.325 8.15833C10.5438 7.93954 10.6667 7.64279 10.6667 7.33337C10.6667 7.02396 10.5438 6.72721 10.325 6.50842C10.1062 6.28962 9.80944 6.16671 9.50002 6.16671C9.1906 6.16671 8.89386 6.28962 8.67506 6.50842C8.45627 6.72721 8.33335 7.02396 8.33335 7.33337C8.33335 7.64279 8.45627 7.93954 8.67506 8.15833C8.89386 8.37712 9.1906 8.50004 9.50002 8.50004Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 5px;"
                          >
                            表格设置
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="custom-icon custom-icon-arrow-down css-u3jcp4"
                              role="img"
                            >
                              <svg
                                fill="currentColor"
                                height="14"
                                viewBox="0 0 14 14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <span
                            class="custom-icon custom-icon-refresh css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M3.18677 2.58588C4.24526 1.66868 5.59943 1.16468 7.00002 1.16663C10.2218 1.16663 12.8334 3.77821 12.8334 6.99996C12.8334 8.24596 12.4425 9.40096 11.7775 10.3483L9.91669 6.99996H11.6667C11.6668 6.08508 11.3979 5.19035 10.8936 4.42703C10.3892 3.66371 9.67165 3.06547 8.83004 2.7067C7.98844 2.34793 7.05994 2.24446 6.15999 2.40914C5.26005 2.57383 4.42837 2.99941 3.76835 3.63296L3.18677 2.58588ZM10.8133 11.414C9.75478 12.3312 8.40061 12.8353 7.00002 12.8333C3.77827 12.8333 1.16669 10.2217 1.16669 6.99996C1.16669 5.75396 1.55752 4.59896 2.22252 3.65163L4.08335 6.99996H2.33335C2.33328 7.91485 2.60213 8.80958 3.10647 9.5729C3.61081 10.3362 4.32839 10.9345 5.17 11.2932C6.0116 11.652 6.9401 11.7555 7.84005 11.5908C8.73999 11.4261 9.57167 11.0005 10.2317 10.367L10.8133 11.414Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            style="width: 100px;"
                          />
                          <col />
                          <col
                            style="width: 240px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              脱敏类型
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命名字段参考
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              脱敏效果
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="4"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`page/DataMaskRuleOverview render overview list snap 1`] = `
<body>
  <div>
    <section>
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          脱敏规则
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-1kh50jg"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-c38ntt"
                style="flex-wrap: wrap; margin-bottom: -8px;"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                  />
                </div>
                <div
                  class="ant-space-item"
                  style="padding-bottom: 8px;"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 12px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm actiontech-table-setting-namespace basic-button-wrapper css-geipcv"
                        style="padding: 0px 6px 0px 8px;"
                        type="button"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-czn7jp ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 5px;"
                          >
                            <span
                              class="custom-icon custom-icon-setting css-u3jcp4"
                              role="img"
                            >
                              <svg
                                fill="currentColor"
                                height="11"
                                viewBox="0 0 13 11"
                                width="13"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0.166687 8.50004H4.25002V9.66671H0.166687V8.50004ZM0.166687 4.41671H5.41669V5.58337H0.166687V4.41671ZM0.166687 0.333374H11.8334V1.50004H0.166687V0.333374ZM11.0599 5.59796L11.7342 5.36987L12.3175 6.38021L11.7832 6.84979C11.8504 7.16867 11.8504 7.49808 11.7832 7.81696L12.3175 8.28654L11.7342 9.29687L11.0599 9.06879C10.8207 9.28463 10.536 9.45088 10.2228 9.55296L10.0834 10.25H8.91669L8.77669 9.55237C8.46709 9.4512 8.18213 9.28627 7.94019 9.06821L7.26585 9.29687L6.68252 8.28654L7.21685 7.81696C7.1496 7.49808 7.1496 7.16867 7.21685 6.84979L6.68252 6.38021L7.26585 5.36987L7.94019 5.59796C8.17935 5.38212 8.46402 5.21587 8.77727 5.11379L8.91669 4.41671H10.0834L10.2234 5.11437C10.536 5.21587 10.8207 5.38271 11.0599 5.59854V5.59796ZM9.50002 8.50004C9.80944 8.50004 10.1062 8.37712 10.325 8.15833C10.5438 7.93954 10.6667 7.64279 10.6667 7.33337C10.6667 7.02396 10.5438 6.72721 10.325 6.50842C10.1062 6.28962 9.80944 6.16671 9.50002 6.16671C9.1906 6.16671 8.89386 6.28962 8.67506 6.50842C8.45627 6.72721 8.33335 7.02396 8.33335 7.33337C8.33335 7.64279 8.45627 7.93954 8.67506 8.15833C8.89386 8.37712 9.1906 8.50004 9.50002 8.50004Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 5px;"
                          >
                            表格设置
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="custom-icon custom-icon-arrow-down css-u3jcp4"
                              role="img"
                            >
                              <svg
                                fill="currentColor"
                                height="14"
                                viewBox="0 0 14 14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <span
                            class="custom-icon custom-icon-refresh css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M3.18677 2.58588C4.24526 1.66868 5.59943 1.16468 7.00002 1.16663C10.2218 1.16663 12.8334 3.77821 12.8334 6.99996C12.8334 8.24596 12.4425 9.40096 11.7775 10.3483L9.91669 6.99996H11.6667C11.6668 6.08508 11.3979 5.19035 10.8936 4.42703C10.3892 3.66371 9.67165 3.06547 8.83004 2.7067C7.98844 2.34793 7.05994 2.24446 6.15999 2.40914C5.26005 2.57383 4.42837 2.99941 3.76835 3.63296L3.18677 2.58588ZM10.8133 11.414C9.75478 12.3312 8.40061 12.8353 7.00002 12.8333C3.77827 12.8333 1.16669 10.2217 1.16669 6.99996C1.16669 5.75396 1.55752 4.59896 2.22252 3.65163L4.08335 6.99996H2.33335C2.33328 7.91485 2.60213 8.80958 3.10647 9.5729C3.61081 10.3362 4.32839 10.9345 5.17 11.2932C6.0116 11.652 6.9401 11.7555 7.84005 11.5908C8.73999 11.4261 9.57167 11.0005 10.2317 10.367L10.8133 11.414Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            style="width: 100px;"
                          />
                          <col />
                          <col
                            style="width: 240px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              脱敏类型
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命名字段参考
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              脱敏效果
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="182****8767-电话"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              电话
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                    style="margin-right: 0px;"
                                  >
                                    电话
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  ...
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              182****8767
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="undefined-护照"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              2
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              护照
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                    style="margin-right: 0px;"
                                  >
                                    passport
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  ...
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="182****8780-undefined"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              3
                            </td>
                            <td
                              class="ant-table-cell"
                            />
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                    style="margin-right: 0px;"
                                  >
                                    SSN
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              182****8780
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="182****8790-undefined"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              4
                            </td>
                            <td
                              class="ant-table-cell"
                            />
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              182****8790
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
                >
                  <li
                    class="ant-pagination-total-text"
                  >
                    <span>
                      共 4 条数据
                    </span>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-options"
                  >
                    <div
                      aria-label="Page Size"
                      class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-label="Page Size"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="20 / page"
                        >
                          20 / page
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
